@@ -1,4 +1,4 @@
-.TH "salloc" "1" "SLURM 2.3" "March 2011" "SLURM Commands"
+.TH "salloc" "1" "SLURM 2.3" "June 2011" "SLURM Commands"
 
 .SH "NAME"
 salloc \- Obtain a SLURM job allocation (a set of nodes), execute a command,
@@ -1048,6 +1048,9 @@ Same as \fB\-I, \-\-immediate\fR
 .TP
 \fBSALLOC_JOBID\fR
 Same as \fB\-\-jobid\fR
+.TP
+\fBSALLOC_KILL_CMD\fR
+Same as \fB\-K\fR, \fB\-\-kill\-command\fR
 .TP
 \fBSALLOC_MEM_BIND\fR
 Same as \fB\-\-mem_bind\fR
