@@ -28,6 +28,7 @@ documents those changes that are of interest to users and admins.
  -- Add -R/--reservation option to squeue command as a job filter.
  -- Add scancel support for --clusters option.
  -- Note that scontrol and sprio can only support a single cluster at one time.
+ -- Add support to salloc for a new environment variable SALLOC_KILL_CMD.
 
 * Changes in SLURM 2.3.0.pre5
 =============================
